--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/font-face/font-face.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/font-face/font-face.scss
@@ -1,2 +1,2 @@
-@import '../../sass/_brand-feature.scss';
+// We dont need any variable overrides for font face declarations.
 @import "component/**/*";
