--- a/docroot/themes/custom/transac/alshaya_example_subtheme/conditional-sass/font-face/font-face.scss
+++ b/docroot/themes/custom/transac/alshaya_example_subtheme/conditional-sass/font-face/font-face.scss
@@ -1,3 +1,6 @@
-@import '../../sass/brand-feature-override';
+// We dont need any variable overrides in font-face.
+/// If brand has its own icons below import is not needed ///
+// We need whitelabel icons as this brand doesnt have its own.
 @import '../../../alshaya_white_label/conditional-sass/font-face/component/**/*';
+///////////////////////////////// Ends //////////////////////
 @import "component/**/*";
