--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/font-face/font-face.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/font-face/font-face.scss
@@ -1,3 +1,4 @@
-@import '../../sass/brand-feature-override';
+// We dont need any variable overrides in font-face.
+// We need whitelabel icons as this brand doesnt have its own.
 @import '../../../alshaya_white_label/conditional-sass/font-face/component/**/*';
 @import "component/**/*";
