--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/font-face/font-face.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/font-face/font-face.scss
@@ -1,3 +1,2 @@
-@import '../../sass/brand-feature-override';
-@import '../../../alshaya_white_label/conditional-sass/font-face/component/**/*';
+// We dont need any variable overrides in font-face.
 @import "component/**/*";
