--- a/docroot/themes/custom/transac/alshaya_pottery_barn_kids/conditional-sass/font-face/font-face.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn_kids/conditional-sass/font-face/font-face.scss
@@ -1,4 +1,4 @@
-@import '../../sass/brand-feature-override';
-@import '../../../alshaya_white_label/conditional-sass/font-face/component/**/*';
+// We dont need any variable overrides in font-face.
+// Since we want fonts to come from PB, we import that.
 @import '../../../alshaya_pottery_barn/conditional-sass/font-face/component/**/*';
 @import "component/**/*";
