--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_write-review-form-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_write-review-form-field.scss
@@ -89,6 +89,7 @@
     }
 
     textarea {
+      display: none;
       resize: none;
       font-size: 0.875rem;
       height: 10rem;
@@ -98,6 +99,17 @@
       &.error {
         border: 1px solid $primary_input_inline_error !important;
       }
+    }
+
+    .ck-content {
+      font-size: 0.875rem;
+      min-height: 10rem;
+      border: 1px solid $primary_input_border !important;
+      padding: 0.75rem !important;
+    }
+
+    .ck-label {
+      display: none;
     }
   }
 
