--- a/docroot/modules/custom/alshaya_product_zoom/templates/product_zoom.html.twig
+++ b/docroot/modules/custom/alshaya_product_zoom/templates/product_zoom.html.twig
@@ -3,7 +3,7 @@
     <div class="cloudzoom thumbnail-count-{{ thumbnails|length }}">
     <div class="cloudzoom__herocontainer">
       <div id="cloud-zoom-wrap" class="cloudzoom__image">
-        <div class="img-wrap" data-scale="2"><img data-zoom-url="{{ mainImage.zoomurl }}" class="b-lazy" src="{{ lazy_load_placeholder }}" data-src="{{ mainImage.mediumurl }}" alt="{{ mainImage.label }}" title="{{ mainImage.label }}" /></div>
+        <div class="img-wrap" data-scale="2"><img data-zoom-url="{{ mainImage.zoomurl }}" loading="lazy" src="{{ mainImage.mediumurl }}" alt="{{ mainImage.label }}" title="{{ mainImage.label }}" /></div>
       </div>
       <div class="yt-vi-container cloudzoom__video_main"></div>
       {%  if labels|length > 0 %}
@@ -17,11 +17,11 @@
       {% for thumbs in thumbnails %}
         {% if thumbs.type == 'youtube' %}
           <li data-iframe="{{ thumbs.url }}" class="cloudzoom__thumbnails__video youtube">
-            <img width='{{ thumbs.width }}' height='{{ thumbs.height }}' src="{{ thumbs.thumburl }}" alt="{{ thumbs.video_desc }}" title="{{ thumbs.video_title }}" />
+            <img width='{{ thumbs.width }}' loading="lazy" height='{{ thumbs.height }}' src="{{ thumbs.thumburl }}" alt="{{ thumbs.video_desc }}" title="{{ thumbs.video_title }}" />
           </li>
         {% elseif thumbs.type == 'vimeo' %}
           <li data-iframe="{{ thumbs.url }}" class="cloudzoom__thumbnails__video vimeo">
-            <img width='{{ thumbs.width }}' height='{{ thumbs.height }}' src="{{ thumbs.thumburl }}" alt="{{ thumbs.video_desc }}" title="{{ thumbs.video_title }}" />
+            <img width='{{ thumbs.width }}' loading="lazy" height='{{ thumbs.height }}' src="{{ thumbs.thumburl }}" alt="{{ thumbs.video_desc }}" title="{{ thumbs.video_title }}" />
           </li>
         {% elseif thumbs.type == 'video' %}
           <li class="cloudzoom__thumbnails__video pdp-video">
@@ -37,7 +37,7 @@
         {% else %}
           <li>
             <a data-zoom-url="{{ thumbs.zoomurl }}" href="{{ thumbs.mediumurl }}" class="cloud-zoom-gallery cloudzoom__thumbnails__image">
-              <img class="b-lazy" src="{{ lazy_load_placeholder }}" data-src="{{ thumbs.thumburl }}" alt="{{ thumbs.label }}" title="{{ thumbs.label }}" />
+              <img loading="lazy" src="{{ thumbs.thumburl }}" alt="{{ thumbs.label }}" title="{{ thumbs.label }}" />
             </a>
           </li>
         {% endif %}
@@ -75,7 +75,7 @@
             </li>
           {% else %}
             <li>
-              <img class="b-lazy" src="{{ lazy_load_placeholder }}" data-src="{{ thumbs.zoomurl }}" alt="{{ thumbs.label }}" title="{{ thumbs.label }}" />
+              <img loading="lazy" src="{{ thumbs.zoomurl }}" alt="{{ thumbs.label }}" title="{{ thumbs.label }}" />
             </li>
           {% endif %}
         {% endfor %}
@@ -98,7 +98,7 @@
             {% if thumbs.type != 'youtube' and thumbs.type != 'vimeo' and thumbs.type != 'video'%}
               <li>
                 <a href="{{ thumbs.fullurl }}" class="imagegallery__thumbnails__image a-gallery">
-                  <img class="b-lazy" src="{{ lazy_load_placeholder }}" data-src="{{ thumbs.fullurl }}" alt="{{ thumbs.label }}" title="{{ thumbs.label }}" />
+                  <img loading="lazy" src="{{ thumbs.fullurl }}" alt="{{ thumbs.label }}" title="{{ thumbs.label }}" />
                 </a>
               </li>
             {% endif %}
