CORE-31511: Fixed PBK AR logo alignment on tablet.

--- a/docroot/themes/custom/transac/alshaya_pottery_barn_kids/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn_kids/sass/components/header/_header-primary.scss
@@ -1,10 +1,4 @@
 header.c-header {
-  .c-header__region {
-    @include breakpoint($only-tablet) {
-      margin-top: 0;
-    }
-  }
-
   @include breakpoint($desktop) {
     border-bottom: 0.0625rem solid $primary_search_border;
   }
@@ -53,11 +47,6 @@ header.c-header {
       }
 
       a {
-        @include breakpoint($only-tablet) {
-          width: 13.4375rem;
-          height: 2rem;
-        }
-
         @include breakpoint($desktop) {
           width: 18.1875rem;
           height: 2.625rem;
@@ -75,6 +64,12 @@ header.c-header {
         }
 
         img {
+          @include breakpoint($only-tablet) {
+            html[lang=ar] & {
+              width: auto !important;
+            }
+          }
+
           @include breakpoint($desktop) {
             width: 100%;
           }
@@ -200,6 +195,18 @@ body {
     &.overlay.overlay-main-menu {
       &::before {
         opacity: 0;
+      }
+    }
+  }
+
+  @include breakpoint($only-tablet) {
+    &.supermenu {
+      margin-top: 10.5625rem !important;
+    }
+
+    &:not(.supermenu) {
+      html[lang=ar] & {
+        margin-top: 8.6875rem;
       }
     }
   }
