CORE-31511: Fixed horizontal scroll issue for inline menu layout with L4 items and issue with inline megamenu height not extending based on L2 items.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-inline-layout/component/_megamenu-inline-layout.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-inline-layout/component/_megamenu-inline-layout.scss
@@ -213,6 +213,7 @@
               margin-top: 0.25rem;
               background: $mm_bg;
               height: 100%;
+              width: auto;
               z-index: 11;
             }
 
