CORE-31717: HFD menu theming fixes on desktop.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
@@ -91,6 +91,7 @@
 
               .highlighted {
                 margin-#{$right}: 1.875rem;
+                max-width: initial;
               }
 
               img {
