--- a/docroot/themes/custom/transac/alshaya_the_body_shop/templates/node/node--acq-product--full.html.twig
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/templates/node/node--acq-product--full.html.twig
@@ -58,3 +58,12 @@
 
   {% include directory ~ '/../alshaya_white_label/templates/partial/product-related.html.twig' %}
 {% endblock %}
+
+{% block sizeVolume %}
+  {% if content.size_volume %}
+    <div class="content--size-volume">
+      <span class="field__label">{{ 'Size'|t }}:</span>
+      <span class="field__value">{{ content.size_volume }}</span>
+    </div>
+  {% endif %}
+{% endblock %}
