[TBD]CORE-32001:BV - Page break to be applied to comments.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_review-comment.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_review-comment.scss
@@ -169,6 +169,10 @@
         padding-top: 1.125rem;
         padding-bottom: 1.125rem;
       }
+
+      &-text {
+        word-break: break-word;
+      }
     }
 
     &-moderation-block {
