CORE-31651: Fixed cros icon alignment for WE on tablet.

--- a/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -60,7 +60,7 @@
 
     @include breakpoint($only-tablet) {
       border-bottom-color: $algolia-auto-complete-border-bottom;
-      width: 13.25rem;
+      width: 100%;
     }
 
     &::placeholder {
