CORE-32037: Fixed signin menu width inside hamburger menu on mobile for WE, PB and PBK.

--- a/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_c-menu-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_c-menu-primary.scss
@@ -96,7 +96,8 @@
 }
 
 .toggle--sign,
-.main--menu ul.menu--one__list:not(.secondary--main--menu__list) {
+.main--menu ul.menu--one__list:not(.secondary--main--menu__list),
+.c-menu-secondary.block--display {
   @include breakpoint($only-mobile) {
     width: 19.6875rem !important;
   }
