CORE-31796: Order list arrow fixes for HM.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/order/_order-list.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/order/_order-list.scss
@@ -197,7 +197,9 @@
 
   .toggle--icon {
     .icon-ic_dropdown-expand {
-      @include icon(dropdown-collapse);
+      @include icon(chevrondown, before) {
+        transform: translateY(-50%) rotate(180deg);
+      }
     }
   }
 }
