CORE-31556: Fixed product image overlapping title issue on VS PDP mobile.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-detail.scss
@@ -443,6 +443,10 @@
     #product-image-gallery-mobile {
       @include breakpoint($only-mobile) {
         max-height: 31.25rem;
+
+        li.slick-slide {
+          max-height: 31.25rem;
+        }
       }
     }
   }
