--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
@@ -141,6 +141,7 @@
     }
 
     &-text {
+      white-space: pre-line;
       font-size: 0.875rem;
       color: $rr-review-summary-grey-text;
       margin-bottom: 0.9375rem;
