CORE-32162: Added PUDO order collection info message in selected store section, render contact_info_desc when PUDO is disabled as per design and updated theming.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-pudo-aramex/component/_pudo-msgs.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-pudo-aramex/component/_pudo-msgs.scss
@@ -11,3 +11,9 @@
     padding-bottom: 9.625rem;
   }
 }
+
+.spc-cnc-selected-store-pudo-info {
+  font-size: 0.875rem;
+  padding-top: 0.9375rem;
+  color: $spc-checkout-billing-help-text;
+}
