--- a/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/header/_header-primary.scss
@@ -338,6 +338,10 @@ header.c-header {
     @include breakpoint($only-mobile) {
       height: 3rem;
       margin: 0;
+
+      html[lang=ar] & {
+        height: 3rem;
+      }
     }
 
     @include breakpoint($only-tablet) {
