CORE-32326: Add z-index on country code list to ensure it appears above inactive payment methods.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-forms/component/_aura-spc-mobile-number.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-forms/component/_aura-spc-mobile-number.scss
@@ -28,6 +28,7 @@
 
     .spc-aura-mobile-number-country-code {
       width: 5.625rem;
+      z-index: 4;
 
       label {
         color: $spc-input-label;
