--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/templates/rcs-pdp-delivery-option-click-and-collect.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/templates/rcs-pdp-delivery-option-click-and-collect.html.twig
@@ -6,14 +6,14 @@
     {% endif %}
   </h3>
   <div class="c-accordion_content">
-    {# This form will appear for configurable products. #}
-    <div class="click-collect-empty-selection configurable">
-        <div class="text">
-          {{ help_text|raw }}
-          <div class="select-size-text">{{ select_option_text|raw }}</div>
-        </div>
+    <div class="click-collect-empty-selection">
+      <div class="text">
+        {{ help_text|raw }}
+        <div class="select-size-text">{{ select_option_text|raw }}</div>
       </div>
-      <div class="click-collect-form" style="display: none;">
+    </div>
+    {# This form will appear for configurable products. #}
+    <div class="click-collect-form configurable">
       <div class="text">
         {{ help_text|raw }}
         <div class="available_store">
