--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/ltr-print.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/ltr-print.scss
@@ -16,6 +16,9 @@
 // Utilities for building multilingual websites.
 @import "../../alshaya_white_label/sass/directional";
 
+// Common styles for @extend.
+@import "../../alshaya_white_label/sass/placeholder";
+
 // These are the default base styles applied to HTML elements.
 @import "../../alshaya_white_label/sass/base/**/*";
 @import "base/**/*";
