--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/rtl-print.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/rtl-print.scss
@@ -19,6 +19,9 @@ $dir: rtl;
 // Utilities for building multilingual websites.
 @import "../../alshaya_white_label/sass/directional";
 
+// Common styles for @extend.
+@import "../../alshaya_white_label/sass/placeholder";
+
 // These are the default base styles applied to HTML elements.
 @import "../../alshaya_white_label/sass/base/**/*";
 @import "base/**/*";
