--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/rtl.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/rtl.scss
@@ -20,6 +20,9 @@ $dir: rtl;
 @import "../../alshaya_white_label/sass/directional";
 @import "directional";
 
+// Common styles for @extend.
+@import "../../alshaya_white_label/sass/placeholder";
+
 // These are the default base styles applied to HTML elements.
 @import "../../alshaya_white_label/sass/base/**/*";
 @import "base/**/*";
