--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/contact/_contact.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/contact/_contact.scss
@@ -66,7 +66,9 @@
 
 .address-book-address,
 .contact-form,
-.user-communication-preference {
+.user-communication-preference,
+.webform-submission-alshaya-contact-form,
+.profile-form {
   max-width: 24.75rem;
   margin-top: 0;
 
@@ -210,8 +212,6 @@
 }
 
 .webform-submission-alshaya-contact-form {
-  @extend .contact-form;
-
   .form-item {
     margin-bottom: 3.5rem;
     display: inline-block;
