--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
@@ -71,6 +71,7 @@
       color: $rr-review-summary-grey-text;
       margin-bottom: 0.9375rem;
       word-break: break-word;
+      white-space: pre-line;
 
       @include breakpoint($only-mobile) {
         margin-bottom: 1.5rem;
