--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
@@ -35,6 +35,7 @@
       margin-bottom: 0.9375rem;
       font-family: $alshaya-thin;
       word-break: break-word;
+      white-space: pre-line;
       line-height: normal;
     }
 
