CORE-32351: Adding placeholder for all themes.

--- a/docroot/themes/custom/transac/alshaya_boots/sass/_placeholder.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/sass/_placeholder.scss
@@ -5,3 +5,16 @@
   font-weight: bold;
   height: 2.5rem;
 }
+
+%button-wide {
+  @extend %btn;
+}
+
+%button-brand {
+  @extend %btn;
+}
+
+%page-title {
+  text-transform: none;
+}
+
