--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/_utils.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/_utils.scss
@@ -11,3 +11,28 @@ $base_theme_loader_img_directory_path: '/themes/custom/transac/alshaya_the_body_
   background-size: contain;
   background-position: center;
 }
+
+// Apply Select Wrapper mixin for all resolutions.
+@mixin select-wrapper($wrapper-width) {
+  width: $wrapper-width;
+  margin-bottom: 0.75rem;
+  position: relative;
+
+  @include icon(dropdown-expand, after) {
+    position: absolute;
+    line-height: 2.1875rem;
+    font-size: 1.75rem;
+    top: 0;
+    #{$left}: auto;
+    width: 2.1875rem;
+    height: 2.1875rem;
+    #{$right}: 0;
+    text-align: center;
+    display: inline-block;
+    background: $primary_dropdown_arrow_bg;
+    color: $primary_dropdown_text;
+    text-indent: -3px;
+    pointer-events: none;
+    box-sizing: border-box;
+  }
+}
