--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/_placeholder.scss
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/_placeholder.scss
@@ -8,3 +8,10 @@
     height: 2.5rem;
   }
 }
+
+%button-wide {
+  font-size: 0.875rem;
+  padding: 0.925rem 1.6rem;
+  height: 2.5rem;
+  text-transform: uppercase;
+}
