--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/base/form/button/_button.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/base/form/button/_button.scss
@@ -1,6 +1,7 @@
 .button-wide,
+.button-brand,
 .brand-button {
-  @extend %brand-wide;
+  @extend %button-wide;
 
   font-size: 1rem !important;
   font-family: $tbs-medium;
