[TBD]CORE-32373:BV - My Accounts Reviews - Viewing images

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
@@ -146,6 +146,10 @@
     .write-review-form {
       padding: 3.625rem;
 
+      @include breakpoint($desktop) {
+        padding-#{$left}: 5.25rem;
+      }
+
       @include breakpoint($upto-desktop) {
         padding: 0.75rem;
       }
