--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
@@ -173,23 +173,88 @@
   }
 }
 
-.thumbnail-img-block {
-  display: flex;
-  overflow-y: auto;
+.review-summary,
+.reviews-block {
+  position: relative;
 
-  @include breakpoint($only-mobile) {
-    margin-bottom: 1.25rem;
+  .thumbnail-img-block {
+    display: flex;
+    overflow-y: auto;
+
+    @include breakpoint($only-mobile) {
+      margin-bottom: 1.25rem;
+    }
+
+    .thumbnail-img {
+      @include bv-photo-upload-container ();
+
+      img {
+        @include bv-photo-upload-image ();
+      }
+    }
+
+    .popup-overlay {
+      background: transparent !important;
+      position: absolute !important;
+      z-index: 2;
+    }
+
+    .popup-content {
+      width: 18.75rem !important;
+      padding: 0 !important;
+      border: 0 !important;
+      z-index: 3 !important;
+      top: 1.875rem !important;
+
+      @include breakpoint($only-mobile) {
+        #{$left}: 0 !important;
+        width: 100% !important;
+        top: 6.25rem !important;
+      }
+
+      .popup-arrow {
+        display: none;
+      }
+
+      .large-image {
+        @include breakpoint($tablet) {
+          width: 18.75rem;
+          height: 23.75rem;
+        }
+
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+          object-position: center;
+          zoom: 1;
+        }
+      }
+
+      .close {
+        position: absolute;
+        #{$right}: 0;
+        border: 0;
+        padding: 0;
+        background: $modal_close_bg;
+        color: $modal_close_icon;
+
+        @include icon(close, after) {
+          font-size: 1.25rem;
+          vertical-align: middle;
+          position: relative;
+        }
+      }
+    }
   }
+}
 
-  @include breakpoint($tablet) {
-    position: relative;
-  }
-
-  .thumbnail-img {
-    @include bv-photo-upload-container ();
-
-    img {
-      @include bv-photo-upload-image ();
+.reviews-block {
+  .thumbnail-img-block {
+    .popup-content {
+      @include breakpoint($tablet) {
+        top: -4.625rem !important;
+      }
     }
   }
 }
