CORE-29676: Revert bv styles with some improvement to fix ui issue on bv brands.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_histogram-data.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_histogram-data.scss
@@ -5,6 +5,10 @@
     padding: 2.875rem 0;
 
     @include breakpoint($tablet) {
+      #{$left}: 50%;
+      margin-#{$left}: -50vw;
+      margin-#{$right}: -50vw;
+      width: 100vw;
       margin-top: 1rem;
     }
 
