CORE-31007: Fixing css order and palcehodler overrides not working.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/my-account/component/_user-dashboard.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/my-account/component/_user-dashboard.scss
@@ -10,10 +10,12 @@
   }
 }
 
-.subtitle {
-  font-family: $vs-regular;
-  font-size: 1.125rem;
-  text-transform: capitalize;
+.path--user.logged-in {
+  .subtitle {
+    font-family: $vs-regular;
+    font-size: 1.125rem;
+    text-transform: capitalize;
+  }
 }
 
 .block-alshaya-acm-customer {
