--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
@@ -241,6 +241,7 @@
 
       @include breakpoint($tablet) {
         margin-bottom: 0.625rem;
+        margin-top: 1.25rem;
       }
 
       &-text {
