[6.5.0]CORE-32439:BP | BV Phase 2 | Review Tilte bottom Margin.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_histogram-data.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_histogram-data.scss
@@ -76,6 +76,7 @@
 
                 @include breakpoint($only-mobile) {
                   height: 1.25rem;
+                  top: -0.25rem;
                 }
               }
             }
