[6.5.0]CORE-32358:MC | PDP Incorrect font.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-ratings-reviews.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-ratings-reviews.scss
@@ -61,6 +61,7 @@ body.ratings-reviews-overlay {
 
                 &-title {
                   text-align: center;
+                  font-family: $alshaya-bold;
                 }
 
                 .histogram {
