--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_review-comment.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_review-comment.scss
@@ -173,6 +173,7 @@
       &-text {
         word-break: break-word;
         white-space: pre-line;
+        font-family: $alshaya-thin;
       }
     }
 
