--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
@@ -225,6 +225,12 @@
       }
     }
   }
+
+  .view_review-overlay,
+  .myaccount_review-overlay {
+    overflow-y: auto;
+    padding: 2.5rem 0;
+  }
 }
 
 .user__order--detail {
