--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
@@ -228,8 +228,10 @@
 
   .view_review-overlay,
   .myaccount_review-overlay {
-    overflow-y: auto;
-    padding: 2.5rem 0;
+    @include breakpoint($tablet) {
+      overflow-y: auto;
+      padding: 2.5rem 0;
+    }
   }
 }
 
