CORE-32223: Mobile landscape footer newsletter theming fixes.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/footer/_footer-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/footer/_footer-primary.scss
@@ -35,6 +35,10 @@
     @include breakpoint($desktop) {
       flex-basis: 27%;
     }
+
+    @include breakpoint($only-tablet) {
+      flex-basis: 34% !important;
+    }
   }
 
   .footer__categories {
