CORE-32393: PLP quick view side drawer label spacing fixes.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
@@ -116,6 +116,10 @@
     .content--item-code {
       font-size: 0.625rem;
       color: $pdp_product_itemcode;
+
+      .field__value {
+        padding-#{$left}: 0.25rem;
+      }
     }
 
     .content--item-code,
