--- a/docroot/modules/custom/alshaya_seo/modules/alshaya_seo_transac/templates/alshaya-sitemap.html.twig
+++ b/docroot/modules/custom/alshaya_seo/modules/alshaya_seo_transac/templates/alshaya-sitemap.html.twig
@@ -1,4 +1,7 @@
 <div class="sitemap">
+  {% block attach_library %}
+    {{ attach_library('alshaya_white_label/sitemap') }}
+  {% endblock %}
     {% if term_tree is not empty %}
         {% for level1 in term_tree %}
           <div class="level--1">
