CORE-32500: Fix inline errors and border color for text field.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_write-review-form-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_write-review-form-field.scss
@@ -97,6 +97,7 @@
 
       &.error {
         border: 1px solid $primary_input_inline_error !important;
+        border-width: 0.125rem !important;
       }
     }
   }
