CORE-32395: Fixed secondary CTA alignment for plp-add-to-bag on TBS.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -1,5 +1,5 @@
 .addtobag-button-container,
-.is-not-buyable {
+.is-not-buyable,
+.addtobag-config-button {
   margin-#{$left}: 0;
-  margin-#{$right}: 0;
 }
