CORE-32406: Fixed plp-add-to-bag buttons UI issues.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
@@ -533,7 +533,7 @@ $plp_facet_mobile: $white;
 $plp_selected_filter_hover: $cyprus;
 
 // PLP add to cart
-$plp-disabled-qty-bg: $silver;
+$plp-disabled-qty-bg: $grey;
 $plp-disabled-qty-icon-color: $metal;
 $plp-quick-view-product-size-active-bg: $white-four;
 $plp-quick-view-product-size-text-active: $black;
@@ -545,6 +545,9 @@ $plp-quick-view-product-size-bg: $white;
 $plp-quick-view-product-size-text: $black;
 $plp-quick-view-product-color-swatch-border: $cyprus;
 $plp-quick-view-product-qty-arrow: $cyprus;
+$plp-primary-cta-hover-bg: $stem-green;
+$plp-primary-cta-hover-text: $primary_text;
+$plp-secondary-cta-hover-bg: $nourishing-white;
 
 // Magazine V2 layout
 $magv2-slider-icon-bg: $cyprus;
