CORE-32626: Muji CS/US gallery thumbnails fix.

--- a/docroot/themes/custom/transac/alshaya_muji/sass/components/cloudzoom/_cloudzoom.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/sass/components/cloudzoom/_cloudzoom.scss
@@ -122,11 +122,14 @@
 }
 
 .acq-content-product-modal {
-  #lightSlider {
+  .cloudzoom__herocontainer {
     @include breakpoint($desktop) {
-      height: 32.875rem;
+      width: calc(100% - 6.75rem);
+      margin-#{$right}: 1rem;
     }
+  }
 
+  #lightSlider {
     .slick-next {
       @include breakpoint($desktop) {
         bottom: 0;
