CORE-28957: Fixed theming for non-clickable L2 items in the left sidebar for both category and department pages.

--- a/docroot/themes/custom/transac/alshaya_pottery_barn_kids/sass/components/facets/_filters.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn_kids/sass/components/facets/_filters.scss
@@ -31,7 +31,8 @@
   .block-alshaya-category-lhn-block {
     ul {
       li {
-        a {
+        a,
+        span {
           &.lhn-4,
           &.lhn-3 {
             @include breakpoint($desktop) {
