--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_products-list-filters.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_products-list-filters.scss
@@ -24,9 +24,9 @@ html {
 }
 
 // All filters Height / overflow issues - all brands
-$all-filter-height-mobile: calc(100vh - 3.75rem - 7.375rem);
-$all-filter-height-tablet: calc(100vh - 5.3125rem - 9.375rem);
-$all-filter-height-desktop: calc(100vh - 5.3125rem - 8.25rem);
+$all-filter-height-mobile: calc(100% - 3.75rem - 7.375rem);
+$all-filter-height-tablet: calc(100% - 5.3125rem - 9.375rem);
+$all-filter-height-desktop: calc(100% - 5.3125rem - 8.25rem);
 
 // Css for filters on products listing page and search page.
 .c-plp .c-content__region {
