--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/templates/node--rcs-product--full.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/templates/node--rcs-product--full.html.twig
@@ -88,7 +88,15 @@ set classes = [
           <div class="mobile-content-wrapper">
             <div class="basic-details-wrapper">
               <div class="field field--name-field-skus field--type-sku field--label-hidden field__items">
-                {% include "@alshaya_rcs_magento_placeholders/rcs-sku-base-form.html.twig" %}
+                <div class="field field--name-field-skus field--type-sku field--label-hidden field__item">
+                <article>
+                  <div class="field field--name-sku field--type-string field--label-above">
+                    <div class="field__label">SKU</div>
+                    <div class="field__item">#rcs.product._self|sku#</div>
+                  </div>
+                  <div>#rcs.product._self|add_to_cart#</div>
+                </article>
+                </div>
               </div>
               {% if quantity_limit_enabled == true %}
                 <div class="order-quantity-limit-message"></div>
