--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/templates/rcs-sku-base-form.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/templates/rcs-sku-base-form.html.twig
@@ -1,10 +1,11 @@
 {# @todo Check for condition where add to bag is disabled. #}
-<form class="sku-base-form" data-sku="#rcs.product._self|sku#" data-sku-type="#rcs.product._self|sku-type#">
+{# .sku-base-form-template will be changed to sku-base-form in JS. #}
+<form class="sku-base-form-template" data-sku="#rcs.product._self|sku#" data-sku-type="#rcs.product._self|sku-type#">
   <div class="errors-container error-container-#rcs.product._self|sku# js-form-wrapper form-wrapper" data-drupal-selector="edit-errors-container" data-msg-required="Please enter your This field." id="edit-errors-container"></div>
-  <div id="configurable_ajax" class="configurable-wrapper-#rcs.product._self|sku# js-form-wrapper form-wrapper" data-drupal-selector="edit-ajax" data-msg-required="Please enter your This field.">#rcs.product._self|add_to_cart#</div>
+  <div id="configurable_ajax" class="configurable-wrapper-#rcs.product._self|sku# js-form-wrapper form-wrapper" data-drupal-selector="edit-ajax" data-msg-required="Please enter your This field."></div>
   <span class="quantity-#rcs.product._self|sku#">
     <div class="js-form-item form-item js-form-type-select form-type-select js-form-item-quantity form-item-quantity">
-      <select name="quantity" class="edit-quantity form-select">#rcs.product._self|quantity#</select>
+      <select name="quantity" class="edit-quantity form-select"></select>
     </div>
   </span>
   <button name="add_to_cart_#rcs.product._self|sku#" id="edit-add-to-cart-#rcs.product._self|sku#" class='cv-validate-before-ajax edit-add-to-cart add-to-cart-button ladda-button' data-twig-suggestion="addtocart" type="submit">{{ "add to cart" | t }}</button>
