CORE-31885: Updated LHN color and text case fixes on category and department pages.

--- a/docroot/themes/custom/transac/alshaya_boots/sass/components/products/_lhn.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/sass/components/products/_lhn.scss
@@ -6,6 +6,12 @@
       span {
         text-transform: none;
       }
+
+      a {
+        &:hover {
+          color: $secondary-link;
+        }
+      }
     }
   }
 }
