--- a/docroot/themes/custom/transac/alshaya_boots/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/sass/config/_colors.scss
@@ -480,7 +480,7 @@ $user_login_link_btn_text: $black-two;
 $user_login_section_title: $drakish-blue;
 
 // PLP LHN block.
-$lhn_l2: $drakish-blue;
+$lhn_l2: $black-two;
 $lhn_l3: $black-two;
 
 //Algolia search bar.
