--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-ratings-reviews.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-ratings-reviews.scss
@@ -69,6 +69,11 @@ body.ratings-reviews-overlay {
                     width: 100%;
                     margin-top: 1.5rem;
 
+                    .already-reviewed-text {
+                      text-align: center;
+                      margin-bottom: 1.25rem;
+                    }
+
                     .average-rating {
                       text-align: center;
                       margin-top: 0.5rem;
