--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
@@ -219,7 +219,14 @@
       .large-image {
         @include breakpoint($tablet) {
           width: 18.75rem;
+        }
+
+        @include breakpoint($desktop) {
           height: 23.75rem;
+        }
+
+        @include breakpoint($only-tablet) {
+          height: 21rem;
         }
 
         img {
@@ -253,7 +260,15 @@
   .thumbnail-img-block {
     .popup-content {
       @include breakpoint($tablet) {
+        margin-#{$left}: 4.5rem;
+      }
+
+      @include breakpoint($desktop) {
         top: -4.625rem !important;
+      }
+
+      @include breakpoint($only-tablet) {
+        top: -3rem !important;
       }
     }
   }
