--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_review-popup.scss
@@ -146,10 +146,6 @@
     .write-review-form {
       padding: 3.625rem;
 
-      @include breakpoint($desktop) {
-        padding-#{$left}: 5.25rem;
-      }
-
       @include breakpoint($upto-desktop) {
         padding: 0.75rem;
       }
@@ -231,6 +227,7 @@
     @include breakpoint($tablet) {
       overflow-y: auto;
       padding: 2.5rem 0;
+      margin-bottom: 0;
     }
   }
 }
