CORE-32667: Added active class in current active item and removed unwanted codes.

--- a/docroot/modules/custom/rcs_placeholders/templates/alshaya-rcs-lhn.html.twig
+++ b/docroot/modules/custom/rcs_placeholders/templates/alshaya-rcs-lhn.html.twig
@@ -6,9 +6,9 @@
         <li>
           {% if link.clickable == 0 %}
             {# If not clickable link. #}
-            <span class="lhn-{{ link.depth }}">{{ link.label }}</span>
+            <span class="lhn-{{ link.depth }} #rcs.lhn.active#">{{ link.label }}</span>
           {% else %}
-            <a href="{{ link.url }}" class = "lhn-{{ link.depth }}">{{ link.label }}</a>
+            <a href="{{ link.url }}" class = "lhn-{{ link.depth }} #rcs.lhn.active#">{{ link.label }}</a>
           {% endif %}
         </li>
       {% endif %}
