CORE-32451: Cart notification position fix on brands with HFD enabled.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/cart/_cart_notification.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/cart/_cart_notification.scss
@@ -114,6 +114,16 @@
   display: none;
 }
 
+header {
+  .secondary-main-menu-wrapper + .block-alshaya-react-mini-cart {
+    #cart_notification {
+      @include breakpoint($tablet) {
+        top: 3.7rem;
+      }
+    }
+  }
+}
+
 html[lang=ar] {
   #cart_notification,
   #static_minicart_notification {
