--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-button-loader.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-button-loader.scss
@@ -8,15 +8,20 @@
         vertical-align: middle;
         width: 1.25rem;
         height: 1.25rem;
-        position: absolute;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        top: 23%;
         transform: none;
         opacity: initial;
         transition: none;
         animation: rotation 1s infinite linear;
+      }
+
+      &:not(.tick) {
+        &::after {
+          position: absolute;
+          left: 0;
+          right: 0;
+          margin: 0 auto;
+          top: 23%;
+        }
       }
 
       &.tick {
