CORE-32166: Used image variable for location path.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-pudo-aramex/component/_pudo-collection-icon.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-pudo-aramex/component/_pudo-collection-icon.scss
@@ -3,14 +3,14 @@
   .store-icon {
     &::before {
       content: '';
-      background: url('../../../imgs/assets/brand-store-icon.svg') no-repeat;
+      background: url(#{$brand_theme_img_directory_path}/assets/brand-store-icon.svg) no-repeat;
     }
   }
 
   .collection-point-icon {
     &::before {
       content: '';
-      background: url('../../../imgs/assets/brand-collection-icon.svg') no-repeat;
+      background: url(#{$brand_theme_img_directory_path}/assets/brand-collection-icon.svg) no-repeat;
     }
   }
 
