--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/footer/_our-brands.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/footer/_our-brands.scss
@@ -81,8 +81,8 @@
 
       .brand {
         html[lang=ar] & {
-          margin-#{$left}: 0.625rem;
-          margin-#{$right}: 0;
+          margin-left: 0.625rem;
+          margin-right: 0;
         }
       }
     }
