CORE-29754: Removed redundant code and fixed RTL issue.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -1735,3 +1735,4 @@ $bp-mobile-scan-bg: $cerulean-two;
 $bp-box-border: $mothercare-black;
 $bp-footer-link: $mothercare-black;
 $bp-mobile-title-border: $_screeching_white;
+$bp-header-gradient: radial-gradient(circle at 59% 168%, #f44242 0%, #83255d 97%, #e62708 191%);
