CORE-31274:BV - translate reviews using Google translate via BV.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
@@ -144,7 +144,7 @@
       white-space: pre-line;
       font-size: 0.875rem;
       color: $rr-review-summary-grey-text;
-      margin-bottom: 0.9375rem;
+      margin-bottom: 0.5rem;
       font-family: $alshaya-thin;
       word-break: break-word;
 
@@ -512,5 +512,28 @@
     @include breakpoint($only-mobile) {
       height: 100vh;
     }
+  }
+}
+
+.translate-by-google,
+.back-to-original {
+  color: $rr-translate-link;
+  font-family: $alshaya-thin;
+  font-size: 0.875rem;
+  cursor: pointer;
+
+  &:hover {
+    color: $rr-translate-link;
+  }
+}
+
+.back-to-original {
+  &::before {
+    content: '';
+    width: 7.75rem;
+    height: 2.5rem;
+    display: block;
+    background: url('#{$base_theme_img_directory_path}/icons/google-translate.png') no-repeat;
+    background-size: 100%;
   }
 }
