--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -34,6 +34,7 @@ $grey-shade: #c1c1c1;
 $grey-light: #777;
 $grey-light-two: #f3f3f3;
 $error-red: #c00;
+$torea-bay: #0b4bb9;
 // Mothercare
 $warm-grey-two: #dadada;
 $black: #333;
@@ -1690,6 +1691,7 @@ $rr-badges-text: $black-two;
 $rr-verified-purchaser-text: $badge-green;
 $rr-verified-purchaser-icon-bg: $badge-green;
 $rr-verified-purchaser-icon: $white-five;
+$rr-translate-link: $torea-bay;
 
 // Fawry colors.
 $fawry-desc-prefix: $_gray_222;
