CORE-32356: Fix for mobile number field in contact us page.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/contact-us/component/_contact.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/contact-us/component/_contact.scss
@@ -292,3 +292,20 @@
     }
   }
 }
+
+.webform-submission-alshaya-contact-form .mobile-number-field .mobile-input--wrapper .country-select {
+  @include country-select;
+}
+
+.webform-submission-alshaya-contact-form .mobile-number-field .mobile-input--wrapper {
+  @include mobile-input-style;
+}
+
+.webform-submission-alshaya-contact-form,
+#selected-store-wrapper {
+  .mobile-number-field {
+    input {
+      @include mobile-number-input-style;
+    }
+  }
+}
