CORE-31274:BV - translate reviews using Google translate via BV.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
@@ -65,6 +65,10 @@
           }
         }
       }
+
+      .review-attributes-details {
+        margin-top: 1rem;
+      }
     }
 
     &-tooltip {
