--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-pudo-aramex/component/_pudo-checkbox.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-pudo-aramex/component/_pudo-checkbox.scss
@@ -14,6 +14,6 @@
   }
 
   input[type=checkbox]:checked ~ label.spc-pudo-checkout-contact-info-checkbox::before {
-    color: $spc-checkout-radio-filled;
+    color: $primary_checkbox_filled;
   }
 }
