--- a/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/footer/_footer-secondary.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/footer/_footer-secondary.scss
@@ -71,12 +71,20 @@
   align-items: center;
   justify-content: center;
 
+  @include breakpoint($only-tablet) {
+    justify-content: space-between;
+  }
+
   .c-footer__copy {
     order: 1;
 
     @include breakpoint($tablet) {
       flex-basis: 85%;
       margin-#{$right}: 0;
+    }
+
+    @include breakpoint($only-tablet) {
+      margin-#{$right}: auto;
     }
 
     @include breakpoint($only-mobile) {
@@ -99,7 +107,7 @@
   }
 
   .c-footer__logos {
-    order: 2;
+    order: 3;
 
     @include breakpoint($tablet) {
       padding-#{$left}: 1.5rem;
@@ -127,5 +135,22 @@
         margin-bottom: 3rem;
       }
     }
+  }
+}
+
+.block-alshaya-vat-certificate-block {
+  @include breakpoint($only-mobile) {
+    margin-top: -1rem;
+  }
+
+  @include breakpoint($only-tablet) {
+    order: 4;
+    // flex-basis: 93%;
+  }
+
+  @include breakpoint($desktop) {
+    order: 2;
+    flex-basis: 85%;
+    margin-#{$right}: 0;
   }
 }
