--- a/docroot/themes/custom/transac/alshaya_footlocker/sass/components/footer/_footer-secondary.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/sass/components/footer/_footer-secondary.scss
@@ -29,3 +29,26 @@
     }
   }
 }
+
+.block-alshaya-vat-certificate-block {
+  @include breakpoint($only-mobile) {
+    html[lang=ar] & {
+      margin-top: -1rem;
+    }
+  }
+
+  @include breakpoint($tablet) {
+    text-align: $right;
+
+    html[lang=ar] & {
+      margin-top: -1.25rem;
+      margin-bottom: 1rem;
+    }
+  }
+
+  @include breakpoint($desktop) {
+    html[lang=ar] & {
+      margin-bottom: 0;
+    }
+  }
+}
