--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/footer/_footer-secondary.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/footer/_footer-secondary.scss
@@ -177,7 +177,7 @@
     width: 55%;
 
     .c-footer-secondary & {
-      width: auto;
+      width: 55%;
     }
 
     .field--name-body {
@@ -253,5 +253,67 @@
         margin: 0 auto;
       }
     }
+  }
+}
+
+@include breakpoint($only-mobile) {
+  .region__footer-secondary {
+    display: flex;
+    flex-direction: column;
+
+    #block-css {
+      order: 1;
+    }
+
+    #block-copyright {
+      order: 2;
+    }
+
+    #block-alshayavatcertificateblock {
+      order: 3;
+    }
+
+    #block-footerlogos {
+      order: 4;
+    }
+  }
+}
+
+.block-alshaya-vat-certificate-block {
+  margin-top: -1.25rem;
+
+  @include breakpoint($only-mobile) {
+    margin-bottom: 0.625rem;
+  }
+
+  @include breakpoint($only-tablet) {
+    margin-bottom: 1.25rem;
+
+    html[lang=ar] & {
+      margin-top: -0.375rem;
+    }
+  }
+
+  @include breakpoint($tablet) {
+    float: $right;
+    clear: both;
+    width: 55%;
+    margin-#{$right}: 1rem;
+  }
+
+  @include breakpoint($desktop) {
+    width: 65%;
+    margin-#{$right}: 3rem;
+    margin-bottom: 0.625rem;
+
+    html[lang=ar] & {
+      margin-top: -1rem;
+    }
+  }
+
+  .vat-link {
+    color: $copyright_footer_paragraph;
+    font-size: 0.6875rem;
+    text-decoration: underline;
   }
 }
