--- a/docroot/themes/custom/transac/alshaya_pottery_barn/sass/components/footer/_footer-secondary.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/sass/components/footer/_footer-secondary.scss
@@ -42,3 +42,16 @@
     }
   }
 }
+
+.block-alshaya-vat-certificate-block {
+  @include breakpoint($only-tablet) {
+    html[lang=ar] & {
+      margin-top: -1.25rem;
+    }
+  }
+
+  @include breakpoint($tablet) {
+    text-align: $right;
+    margin-#{$right}: 0;
+  }
+}
