CORE-32664: Vat certificate BBW.

--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/components/footer/_footer-secondary.scss
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/components/footer/_footer-secondary.scss
@@ -35,3 +35,17 @@
     }
   }
 }
+
+.block-alshaya-vat-certificate-block {
+  text-align: $right;
+  margin-#{$right}: 3rem;
+
+  @include breakpoint($only-mobile) {
+    text-align: center;
+    margin-#{$right}: 0;
+  }
+
+  @include breakpoint($only-tablet) {
+    margin-#{$right}: 1rem;
+  }
+}
