CORE-33327: Used the new brand logo graphql attribute.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
@@ -32,7 +32,7 @@
         {% if quantity_limit_enabled == true %}
           <div class="order-quantity-limit-message mobile-only"></div>
         {% endif %}
-        <div class="brand-logo-wrapper">#rcs.product.brand_logo#</div>
+        <div>#rcs.product._self|brand_logo#</div>
 
         {% block productBrand %}
         {% endblock %}
