CORE-32392: CSS for PLP swatch border.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
@@ -7,6 +7,7 @@
       &.active {
         &::after {
           border-color: $plp-quick-view-product-color-swatch-border;
+          border-radius: 100%;
         }
       }
     }
