CORE-33334: Move mada card logo style to whitelabel and fix ui issues on aeo secondary footer.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/alshaya-vat-certificate/component/_alshaya-vat-certificate.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/alshaya-vat-certificate/component/_alshaya-vat-certificate.scss
@@ -8,10 +8,11 @@
   }
 
   @include breakpoint($desktop) {
-    order: 2;
-    flex-basis: 85%;
+    order: 3;
+    flex-basis: 100%;
     margin-#{$right}: 0;
     margin-top: 0 !important;
+    padding: 0 0.3125rem;
   }
 }
 
